--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <a href="./marcos.html">IR A MARCOS</a>
+            </li>
+            <li>
+                <a href="./santi.html">IR A SANTI</a>
+            </li>
+            <li>
+                <a href="./tamara.html">IR A TAMARA</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
