--- a/tamara.html
+++ b/tamara.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>TAMARA</h1>
-    <h2>Subir a github</h2>
+    <h2>Queria ser el impostor :(</h2>
+    <a href="https://i.pinimg.com/originals/75/d9/53/75d9534c0de0dceb4970025e0176508b.png"></a>
 </body>
 </html>
